nova_tests/negative_capability/overload_ambiguous.nv
// EXPECT_COMPILE_ERROR ambiguous overload
//
// D84: вызов свободной overloaded-функции, где два кандидата matching
// по arg-types и codegen не может различить их по другим осям —
// compile error «ambiguous overload».
//
// Это **известный gap** Q-overload-result-type: D84 ось 3 (overload
// по return-type через context) не реализована в bootstrap-codegen.
// Type-checker регистрирует overloads с разным return-type без error,
// но на call-site без expected-type propagation — ambiguity.
//
// Этот тест **фиксирует** текущее поведение (compile error) — когда
// Q-overload-result-type будет закрыт, тест нужно переделать в
// positive (let-аннотация выбирает overload).
//
// Spec: spec/decisions/10-overloading.md → D84 + Bootstrap-status ⚠️.

module nova_tests.negative_capability.overload_ambiguous


fn convert(n int) -> str { "as str: ${n}" }
fn convert(n int) -> bool { n != 0 }


fn caller() -> str {
    let s str = convert(42)    // ❌ ambiguous: оба matching по (int)
    s
}


test "ambiguous overload по return-type — compile error (negative)" {
    let _ = caller()
    assert(true)
}
